# GDMMCore

./: README.md
AndroidDemo/app/: CMakeLists.txt  build.gradle
AndroidDemo/app/src/androidTest/java/me/oogh/demo/: ExampleInstrumentedTest.java
AndroidDemo/app/src/main/: AndroidManifest.xml
AndroidDemo/app/src/main/java/me/oogh/demo/: DisplayView.java  JNIHelper.java  MainActivity.java
AndroidDemo/app/src/main/res/layout/: activity_main.xml
AndroidDemo/app/src/test/java/me/oogh/demo/: ExampleUnitTest.java
AndroidDemo/gradle/wrapper/: gradle-wrapper.properties
GDMMCore/common/: jni-helper.cpp  jni-helper.h  platform.h  rectangle.cpp  rectangle.h  render.cpp  render.h  shader.cpp  shader.h  utils.cpp  utils.h
iOSDemo/iOSDemo/: AppDelegate.h  AppDelegate.m  DisplayViewController.h  DisplayViewController.mm  ViewController.h  ViewController.m  main.m
iOSDemo/iOSDemo.xcodeproj/: project.pbxproj
iOSDemo/iOSDemo.xcodeproj/project.xcworkspace/xcuserdata/andy.xcuserdatad/: UserInterfaceState.xcuserstate
iOSDemo/iOSDemo/Base.lproj/: Main.storyboard
